--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2335,7 +2335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
@@ -2344,7 +2344,7 @@
        "Lasso(alpha=0.001)"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 159,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2359,19 +2359,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.916617242290773\n"
+      "0.8910445936267739\n"
      ]
     }
    ],
    "source": [
-    "#Predict R-Squared\n",
+    "# Predict R-Squared\n",
     "\n",
     "y_train_pred = lasso.predict(X_train)\n",
     "print(metrics.r2_score(y_true=y_train, y_pred=y_train_pred))"
@@ -2379,14 +2379,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.8535715805968973\n"
+      "0.8756767740067282\n"
      ]
     }
    ],
@@ -2397,16 +2397,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.024093349191598844"
+       "0.020456158092071082"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 150,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2417,7 +2417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
@@ -2490,7 +2490,7 @@
        "        3.04990173e-02,  1.20188476e-02])"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 161,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2501,7 +2501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
@@ -2529,7 +2529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [
     {
@@ -2538,160 +2538,13 @@
        "{'alpha': 0.1}"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 169,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "model_cv.best_params_"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 135,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.9570918677565143\n",
-      "0.7467661334091003\n"
-     ]
-    }
-   ],
-   "source": [
-    "ridge = Ridge(alpha = 0.1)\n",
-    "ridge.fit(X_train,y_train)\n",
-    "\n",
-    "y_pred_train = ridge.predict(X_train)\n",
-    "print(r2_score(y_train,y_pred_train))\n",
-    "\n",
-    "y_pred_test = ridge.predict(X_test)\n",
-    "print(r2_score(y_test,y_pred_test))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 136,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model_parameter = list(ridge.coef_)\n",
-    "model_parameter.insert(0,ridge.intercept_)\n",
-    "cols = df_train.columns\n",
-    "cols.insert(0,'constant')\n",
-    "ridge_coef = pd.DataFrame(list(zip(cols,model_parameter)))\n",
-    "ridge_coef.columns = ['Feaure','Coef']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 137,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Feaure</th>\n",
-       "      <th>Coef</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>MSSubClass</td>\n",
-       "      <td>10.752619</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>114</th>\n",
-       "      <td>RoofMatl_Membran</td>\n",
-       "      <td>0.443822</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>41</th>\n",
-       "      <td>MSZoning_RL</td>\n",
-       "      <td>0.420250</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>39</th>\n",
-       "      <td>MSZoning_FV</td>\n",
-       "      <td>0.419403</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>40</th>\n",
-       "      <td>MSZoning_RH</td>\n",
-       "      <td>0.410058</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>42</th>\n",
-       "      <td>MSZoning_RM</td>\n",
-       "      <td>0.370905</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>116</th>\n",
-       "      <td>RoofMatl_Roll</td>\n",
-       "      <td>0.331017</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>115</th>\n",
-       "      <td>RoofMatl_Metal</td>\n",
-       "      <td>0.297196</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>119</th>\n",
-       "      <td>RoofMatl_WdShngl</td>\n",
-       "      <td>0.286457</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>92</th>\n",
-       "      <td>Condition2_PosA</td>\n",
-       "      <td>0.253583</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "               Feaure       Coef\n",
-       "0          MSSubClass  10.752619\n",
-       "114  RoofMatl_Membran   0.443822\n",
-       "41        MSZoning_RL   0.420250\n",
-       "39        MSZoning_FV   0.419403\n",
-       "40        MSZoning_RH   0.410058\n",
-       "42        MSZoning_RM   0.370905\n",
-       "116     RoofMatl_Roll   0.331017\n",
-       "115    RoofMatl_Metal   0.297196\n",
-       "119  RoofMatl_WdShngl   0.286457\n",
-       "92    Condition2_PosA   0.253583"
-      ]
-     },
-     "execution_count": 137,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ridge_coef.sort_values(by='Coef',ascending=False).head(10)"
    ]
   },
   {
@@ -2728,7 +2581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [
     {
@@ -2750,7 +2603,7 @@
        "             verbose=1)"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 178,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2763,7 +2616,6 @@
     "\n",
     "ridge = Ridge()\n",
     "\n",
-    "# cross validation\n",
     "folds = 5\n",
     "model_cv = GridSearchCV(estimator = ridge, \n",
     "                        param_grid = params, \n",
@@ -3685,7 +3537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [
     {
@@ -3745,14 +3597,13 @@
        "        0.0162496 ,  0.04842328,  0.03045968])"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 179,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Final Model\n",
-    "\n",
     "alpha = 10\n",
     "ridge = Ridge(alpha=alpha)\n",
     "\n",
@@ -3817,6 +3668,160 @@
    "source": [
     "# RMSE Value\n",
     "mean_squared_error(y_test, y_test_pred)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Finalisation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 173,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9570918677565143\n",
+      "0.7467661334091003\n"
+     ]
+    }
+   ],
+   "source": [
+    "ridge = Ridge(alpha = 0.1)\n",
+    "ridge.fit(X_train,y_train)\n",
+    "\n",
+    "y_pred_train = ridge.predict(X_train)\n",
+    "print(r2_score(y_train,y_pred_train))\n",
+    "\n",
+    "y_pred_test = ridge.predict(X_test)\n",
+    "print(r2_score(y_test,y_pred_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 174,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_parameter = list(ridge.coef_)\n",
+    "model_parameter.insert(0,ridge.intercept_)\n",
+    "cols = df_train.columns\n",
+    "cols.insert(0,'constant')\n",
+    "ridge_coef = pd.DataFrame(list(zip(cols,model_parameter)))\n",
+    "ridge_coef.columns = ['Feaure','Coef']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 175,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Feaure</th>\n",
+       "      <th>Coef</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>MSSubClass</td>\n",
+       "      <td>10.752619</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>114</th>\n",
+       "      <td>RoofMatl_Membran</td>\n",
+       "      <td>0.443822</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41</th>\n",
+       "      <td>MSZoning_RL</td>\n",
+       "      <td>0.420250</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>MSZoning_FV</td>\n",
+       "      <td>0.419403</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40</th>\n",
+       "      <td>MSZoning_RH</td>\n",
+       "      <td>0.410058</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42</th>\n",
+       "      <td>MSZoning_RM</td>\n",
+       "      <td>0.370905</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>116</th>\n",
+       "      <td>RoofMatl_Roll</td>\n",
+       "      <td>0.331017</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>115</th>\n",
+       "      <td>RoofMatl_Metal</td>\n",
+       "      <td>0.297196</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>119</th>\n",
+       "      <td>RoofMatl_WdShngl</td>\n",
+       "      <td>0.286457</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>92</th>\n",
+       "      <td>Condition2_PosA</td>\n",
+       "      <td>0.253583</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               Feaure       Coef\n",
+       "0          MSSubClass  10.752619\n",
+       "114  RoofMatl_Membran   0.443822\n",
+       "41        MSZoning_RL   0.420250\n",
+       "39        MSZoning_FV   0.419403\n",
+       "40        MSZoning_RH   0.410058\n",
+       "42        MSZoning_RM   0.370905\n",
+       "116     RoofMatl_Roll   0.331017\n",
+       "115    RoofMatl_Metal   0.297196\n",
+       "119  RoofMatl_WdShngl   0.286457\n",
+       "92    Condition2_PosA   0.253583"
+      ]
+     },
+     "execution_count": 175,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ridge_coef.sort_values(by='Coef',ascending=False).head(10)"
    ]
   },
   {
