--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2520,9 +2520,9 @@
     "\n",
     "plt.plot(results_l['param_alpha'], results_l['mean_train_score'])\n",
     "plt.xlabel('alpha')\n",
-    "plt.ylabel('Negative Mean Absolute Error')\n",
+    "plt.ylabel('Negative Mean Error')\n",
     "\n",
-    "plt.title(\"Negative Mean Absolute Error and alpha\")\n",
+    "plt.title(\"Negative Mean Error vs alpha\")\n",
     "plt.legend(['train score', 'test score'], loc='upper left')\n",
     "plt.show()"
    ]
@@ -3528,10 +3528,10 @@
     "plt.figure(figsize=(21,10))\n",
     "plt.plot(results['param_alpha'], results['mean_test_score'])\n",
     "plt.plot(results['param_alpha'], results['mean_train_score'])\n",
-    "plt.ylabel('Negative Mean Absolute Error')\n",
+    "plt.ylabel('Negative Mean Error')\n",
     "plt.xlabel('alpha')\n",
     "plt.legend(['train score', 'test score'], loc='upper right')\n",
-    "plt.title(\"Negative Mean Absolute Error and alpha\")\n",
+    "plt.title(\"Negative Mean Error vs alpha\")\n",
     "plt.show()"
    ]
   },
