--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -1331,6 +1331,8 @@
     }
    ],
    "source": [
+    "# Analysis of Correlation between variables\n",
+    "\n",
     "corrmat = dataHouse.corr()\n",
     "f, ax = plt.subplots(figsize=(12, 9))\n",
     "sns.heatmap(corrmat, vmax=.8, square=True);\n",
@@ -1354,6 +1356,8 @@
     }
    ],
    "source": [
+    "# Pair Plots for a select amount of variables\n",
+    "\n",
     "sns.set()\n",
     "cols = ['SalePrice', 'OverallQual', 'GrLivArea', 'GarageCars', 'TotalBsmtSF', 'FullBath', 'YearBuilt']\n",
     "sns.pairplot(dataHouse[cols], size = 2.5)\n",
@@ -2022,6 +2026,8 @@
     }
    ],
    "source": [
+    "# Train New Model \n",
+    "\n",
     "reg = LinearRegression()\n",
     "reg.fit(X_train,y_train)"
    ]
@@ -2291,6 +2297,8 @@
     }
    ],
    "source": [
+    "# Lasso Regression Syntax\n",
+    "\n",
     "params = {'alpha': [0.00005, 0.0001, 0.001, 0.008, 0.01]}\n",
     "lasso = Lasso()\n",
     "\n",
@@ -2609,6 +2617,8 @@
     }
    ],
    "source": [
+    "# Ridge Regression Syntax\n",
+    "\n",
     "params = {'alpha': [0.0001, 0.001, 0.01, 0.05, 0.1, \n",
     " 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1.0, 2.0, 3.0, \n",
     " 4.0, 5.0, 6.0, 7.0, 8.0, 9.0, 10.0, 20, 50, 100]}\n",
@@ -3524,6 +3534,8 @@
     }
    ],
    "source": [
+    "# Plot Negative Mean Error vs alpha\n",
+    "\n",
     "results['param_alpha'] = results['param_alpha'].astype('int32')\n",
     "plt.figure(figsize=(21,10))\n",
     "plt.plot(results['param_alpha'], results['mean_test_score'])\n",
